# the_book

./: .gitignore
10_generic_types_traits_and_lifetimes/defining_shared_behavior_with_traits/src/: main.rs
10_generic_types_traits_and_lifetimes/validating_references_with_lifetimes/: notes.md
11_writing_automated_tests/controlling_how_tests_are_run/: README.md
11_writing_automated_tests/test_organization/: README.md
12_an_io_project_building_a_command_line_program/: README.md
13_functional_language_features_iterators_and_closures/: note.txt
13_functional_language_features_iterators_and_closures/processing_a_series_of_items_with_iterators/: Cargo.toml
14_more_about_caro_and_crates_io/cargo_workspaces/: README.md
14_more_about_caro_and_crates_io/customizing_builds_with_release_profiles/: Cargo.toml  README.md
14_more_about_caro_and_crates_io/installing_and_extending_cargo/: README.md
14_more_about_caro_and_crates_io/publishing_a_crate_to_crates_io/: Cargo.toml  README.md
15_smart_pointers/treating_smart_pointers_like_regular_references/: Cargo.toml
15_smart_pointers/using_box_to_point_to_data_on_the_heap/: Cargo.toml
7_packages_crates_and_modules/: module_system.md
7_packages_crates_and_modules/packages_and_crates/: Cargo.toml
7_packages_crates_and_modules/packages_and_crates/src/: main.rs
8_common_collections/storing_keys_with_associated_values_in_hash_map/: Cargo.toml
8_common_collections/storing_lists_of_values_with_vectors/: Cargo.toml
9_error_handling/unrecoverable_errors_with_panic/: Cargo.toml
a_guessing_game/src/: main.rs
(+32 files in other folders)
